updaed arror handling

--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
         <label for="cash-given">Cash Given : </label>
 
         <input type="number" name="cash-given" id="cash-given">
-        <button type="submit" id="submitbtn">submit</button>
 
+        <button type="submit" id="submitbtn">submit</button>
+        <p id="err"> </p>
         <label for="return-change">Return Change : </label>
 
         <table>
             <tr>
-                <th>note types</th>
+                <th>Count</th>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
@@ -39,7 +40,7 @@
                 <td>0</td>
             </tr>
             <tr>
-                <th>count</th>
+                <th>denominations</th>
                 <td>2000</td>
                 <td>500</td>
                 <td>100</td>
